--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,54 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+
+/* Root Styles */
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  overflow: hidden;
+  --font-jakarta: 'Plus Jakarta Sans', sans-serif;
+  --font-league: ' League Spartan', sans-serif;
+}
+
+.contain {
+  max-width: 1440px;
+}
+
+/* ____________________________ */
+/* Common Classes */
+
+.common-auth-container{
+  @apply flex flex-col gap-[24px] md:max-w-[424px] mx-auto mt-[100px] px-[16px]
+}
+
+.common-inputs{
+  @apply w-full border border-black h-[60px] rounded-[10px] [font-family:var(--font-league)] pl-[48px] pr-[16px] py-[16px] text-base sm:text-xl font-normal text-[#B1B1B1] focus-visible:outline-none focus-visible:border-[#5183F4]
+}
+
+.common-btn{
+  @apply w-full h-[60px] rounded-[10px] bg-[#5183F4] [font-family:var(--font-league)] text-white font-semibold text-base sm:text-xl cursor-pointer;
+}
+
+
+/* ____________________________*/
+/* ant design override */
+.ant-select-arrow {
+  @apply hidden invisible;
+}
+
+:where(.css-dev-only-do-not-override-7t2xvq).ant-select-outlined:not(.ant-select-customize-input) .ant-select-selector {
+  @apply border-0;
+}
+
+.ant-select-selection-item {
+  @apply text-[#B1B1B1] text-base sm:text-xl;
+}
+
+:where(.css-dev-only-do-not-override-7t2xvq).ant-flex-align-flex-start {
+  @apply items-center;
+}
+
+:where(.css-dev-only-do-not-override-7t2xvq).ant-otp .ant-otp-input {
+  @apply w-[40px] sm:w-[64px] border-0 border-b-1 border-[#B1B1B1] rounded-none font-medium text-3xl sm:text-5xl [font-family:var(--font-jakarta)] text-[#181A20];
+}
+
+:where(.css-dev-only-do-not-override-7t2xvq).ant-input-outlined:focus,
+:where(.css-dev-only-do-not-override-7t2xvq).ant-input-outlined:focus-within {
+  @apply shadow-none;
 }
