--- a/src/index.css
+++ b/src/index.css
@@ -230,7 +230,7 @@ p {
 /* ANT design tab override */
 /* Main Segmented container */
 :where(.css-dev-only-do-not-override-7t2xvq).ant-segmented {
-  @apply h-[68px] w-[482px] p-[10px] rounded-[100px] bg-[#5183F4] flex items-center transition-all duration-300;
+  @apply h-[68px] w-[300px] md:w-[482px] p-[10px] rounded-[100px] bg-[#5183F4] flex items-center transition-all duration-300;
 }
 
 :where(.css-dev-only-do-not-override-7t2xvq).ant-segmented .ant-segmented-group {
@@ -238,13 +238,22 @@ p {
 }
 
 :where(.css-dev-only-do-not-override-7t2xvq).ant-segmented .ant-segmented-item {
-  @apply flex items-center justify-center h-[48px] px-6 rounded-[100px] text-white transition-all duration-300 ease-in-out;
+  @apply flex items-center justify-center h-[48px] md:px-6 rounded-[100px] text-white transition-all duration-300 ease-in-out;
 }
 
 :where(.css-dev-only-do-not-override-7t2xvq).ant-segmented .ant-segmented-item-selected {
-  @apply bg-white text-[#5183F4] shadow-md;
+  @apply bg-white text-[#717171] shadow-md;
 }
 
 :where(.css-dev-only-do-not-override-7t2xvq).ant-segmented .ant-segmented-item-selected{
-  @apply w-[219px]
+  @apply md:w-[219px]
+}
+:where(.css-dev-only-do-not-override-7t2xvq).ant-segmented .ant-segmented-item::after{
+  @apply rounded-[100px]
+}
+:where(.css-dev-only-do-not-override-7t2xvq).ant-segmented .ant-segmented-group{
+  @apply justify-between! w-full!
+}
+:where(.css-dev-only-do-not-override-7t2xvq).ant-segmented .ant-segmented-item:hover:not(.ant-segmented-item-selected):not(.ant-segmented-item-disabled){
+  @apply text-white
 }
